# shine-rs

./: .gitignore  .gitmodules  AGENTS.md  BIG_VALUES_FIX_SUMMARY.md  Cargo.toml  HUFFMAN_REFACTOR_SUMMARY.md  LICENSE  PUBLISHING_GUIDE.md  README.md  README_HIGH_LEVEL_API.md  TESTING_COMPLETION_SUMMARY.md  TEST_DATA_FRAMEWORK.md  bitstream_verification_report.md  data_structure_analysis.md  data_structure_consistency_analysis.md  data_structure_consistency_report.md  debug_analysis.md  debug_big_values.rs  debug_frame_size.rs  debug_stereo_test.rs  debug_test.rs  debug_wav_parsing.rs  generate_test_wav.py  huffman_verification_report.md  huffman_verification_summary.md  module_correspondence_analysis.md  optimization_checklist.md  quantization_verification_report.md  sample_3s_128k.json  task_3_4_verification_report.md  test_data.json  test_data_128k.json  test_data_192k.json  test_frame_sync.rs  test_stack_overflow.rs
.cargo/: config.toml
.claude/: guidelines.md  settings.local.json
.github/: BRANCH_PROTECTION.md  CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  pr-checks.yml
.kiro/specs/mp3-audio-data-encoding-fix/: design.md  requirements.md  tasks.md
.kiro/specs/rust-mp3-encoder/: design.md  requirements.md  simplified-implementations-fix.md  tasks.md
.kiro/steering/: coding-standards.md  debugging-workflow.md  language-preference.md  testing-guidelines.md
benches/: encoder_benchmark.rs
crate/: Cargo.toml  README.md
crate/examples/: comprehensive_example.rs  error_handling.rs  simple_encoding.rs
crate/src/: bitstream.rs  diagnostics.rs  diagnostics_data.rs  encoder.rs  error.rs  huffman.rs  lib.rs  mdct.rs  mp3_encoder.rs  quantization.rs  reservoir.rs  subband.rs  tables.rs  types.rs
crate/tests/: bitstream_tests.rs  encoder_tests.rs  mdct_tests.rs  mod.rs  mp3_encoder_tests.rs  quantization_tests.rs  scfsi_tests.rs  subband_tests.rs  types_tests.rs
docs/: AUDIO_FILES_STANDARDIZATION.md  FOLDER_REORGANIZATION_SUMMARY.md  FRAME_LIMIT_FEATURE.md  FRAME_LIMIT_IMPLEMENTATION_SUMMARY.md  FRAME_LIMIT_QUICK_REFERENCE.md  HIGH_LEVEL_API.md  LOGGING_SYSTEM.md  MDCT_COEFFICIENT_COLLECTION_FIX.md  MULTITHREADING_SUPPORT_SUCCESS.md  PROJECT_STRUCTURE.md  REFERENCE_DATA_STATUS.md  TESTING_GUIDE.md  TEST_DATA_FRAMEWORK.md  TEST_REFACTORING_ANALYSIS.md  TEST_REFACTORING_COMPLETION_SUMMARY.md  VERIFICATION_RECORD.md
examples/: README.md  basic_encoding.rs  comprehensive_example.rs  error_handling.rs  simple_encoding.rs
scripts/: README.md  README_compare.md  analyze_encoding_differences.py  batch_compare.py  benchmark_encoders.py  compare_encoders.py  create_test_wav.py  diagnose_voice_issue.py  extract_shine_debug_data.py  generate_reference_data.py  generate_reference_files.py  generate_reference_validation_data.py  generate_shine_reference_data.py  generate_test_wav.py  parse_shine_debug_output.py  prepare_release.ps1  publish.ps1  publish_crate.ps1  quick_compare.py  run_test_suite.ps1  test_bitstream_endian.c  validate_reference_files.py
src/: bitstream.rs  config.rs  data_flow_monitor.rs  diagnostics_data.rs  encoder.rs  error.rs  huffman.rs  lib.rs  main.rs  mdct.rs  mdct_clean.rs  mp3_encoder.rs  pcm_utils.rs  quantization.rs  reservoir.rs  shine_config.rs  subband.rs  tables.rs  test_data.rs  types.rs  util.rs  verification_3_4.rs
src/tests/: bitstream_tests.rs  encoder_tests.rs  mdct_tests.rs  mod.rs  pcm_utils_tests.rs  quantization_tests.rs  scfsi_tests.rs  subband_tests.rs  types_tests.rs
testing/fixtures/audio/: README.md
testing/fixtures/data/: README.md  sample-3s_128k_6f.json  sample-3s_192k_3f.json  sample_3s_test_data.json  test-collect-3frames.json  test_data.json  voice_recorder_128k_3f.json  voice_recorder_128k_6f.json
testing/fixtures/tools/collect_test_data/: Cargo.toml
testing/fixtures/tools/collect_test_data/src/: main.rs
testing/integration/: README.md  integration_data_driven_validation.rs  integration_full_pipeline_validation.rs  integration_scfsi_consistency.rs
testing/regression/: bitstream.txt  subband.txt
tests/: README.md  README_all_tests.md  big_values_comprehensive_test.rs  big_values_debug_test.rs  big_values_validation_test.rs  bitstream_debug_test.rs  data_flow_validation_test.rs  debug_48khz_issue.rs  debug_big_values_test.rs  debug_comprehensive.rs  debug_mp3_frame.rs  debug_quantization.rs  debug_quantization_detailed.rs  debug_side_info.rs  debug_tools.rs  encoder_basic_functionality.rs  encoder_comparison_live.rs  encoder_high_level_api.rs  encoder_low_level_api.rs  encoder_output_analysis.rs  encoder_validation_cicd.rs  encoding_pipeline_debug.rs  end_to_end_validation.rs  ffmpeg_validation_test.rs  final_validation_test.rs  frame_format_test.rs  frame_header_debug.rs  huffman_debug_test.rs  integration_batch_encoder_comparison.md  integration_batch_encoder_comparison.rs  integration_data_driven_validation.rs  integration_encoder_comparison.md  integration_encoder_comparison.rs  integration_fix_test.rs  integration_full_pipeline_validation.rs  integration_pipeline_validation.md  integration_pipeline_validation.rs  integration_reference_validation.md  integration_reference_validation.rs  integration_scfsi_consistency.md  (+17 more)
tests/audio/: README.md  reference_manifest.json
tests/audio/inputs/: reference_manifest.json
tests/data/: free_test_data_128k_6f.json  sample-3s_192k_6f.json
tests/docs/: environment_variable_integration.md
tests/integration_reference_validation.data/: README.md  reference_manifest.json
tests/pipeline_data/: free_test_data_128k_3f.json  free_test_data_128k_3f_real.json  sample-3s_128k_3f.json  sample-3s_128k_3f_real.json  sample-3s_192k_3f.json  sample-3s_192k_3f_real.json  voice_recorder_128k_3f.json  voice_recorder_128k_3f_real.json
tools/: Cargo.toml  README.md
tools/collect_test_data/: Cargo.toml
tools/mp3_hexdump/: Cargo.toml
tools/mp3_hexdump/src/: main.rs
tools/mp3_validator/: Cargo.toml
tools/validate_test_data/: Cargo.toml
tools/wav2mp3/: Cargo.toml
tools/wav2mp3/src/: main.rs
util/src/: error.rs  lib.rs  pcm_utils.rs
(+3 files in other folders)
