[package]
name = "shine-rs"
version = "0.1.0"
edition = "2021"
authors = ["Shon Wang <code@wshon.com>"]
description = "A pure Rust MP3 encoder based on the shine library, providing complete MPEG Layer III encoding functionality"
license = "LGPL-2.1-or-later"
repository = "https://github.com/wshon/shine-rs"
homepage = "https://github.com/wshon/shine-rs"
documentation = "https://docs.rs/shine-rs"
readme = "README.md"
keywords = ["mp3", "audio", "encoder", "codec", "shine"]
categories = ["multimedia::audio", "encoding"]
exclude = [
    "ref/*",
    "testing/*",
    "tools/*",
    "scripts/*",
    "docs/*",
    "*.mp3",
    "*.wav",
    "*.pdb",
    ".git*",
    ".claude/*"
]

[features]
default = []
diagnostics = ["serde", "serde_json", "chrono"]  # Enable diagnostic logging and data collection

[dependencies]
thiserror = "1.0"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
log = "0.4"

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
env_logger = "0.10"
sha2 = "0.10"
util = { path = "util" }

[[test]]
name = "integration_scfsi_consistency"
path = "testing/integration/integration_scfsi_consistency.rs"

[[test]]
name = "integration_data_driven_validation"
path = "testing/integration/integration_data_driven_validation.rs"
required-features = ["diagnostics"]

[profile.dev]
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1