[workspace]
members = [
    "crate"
]
resolver = "2"

[package]
name = "shine-rs-cli"
version = "0.1.2"
edition = "2021"
authors = ["Shon Wang <code@wshon.com>"]
description = "Command-line tools for the shine-rs MP3 encoder library"
license = "LGPL-2.0"
repository = "https://github.com/wshon/shine-rs"
homepage = "https://github.com/wshon/shine-rs"
readme = "README.md"

[dependencies]
shine-rs = { path = "crate" }
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"

[dev-dependencies]

# 集成测试配置
[[test]]
name = "integration_scfsi_consistency"
path = "testing/integration/integration_scfsi_consistency.rs"

[[test]]
name = "integration_data_driven_validation"
path = "testing/integration/integration_data_driven_validation.rs"
required-features = ["diagnostics"]

[profile.dev]
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1