[workspace]
members = [
    "crate"
]
resolver = "2"

[package]
name = "shine-rs-cli"
version = "0.1.2"
edition = "2021"
authors = ["Shon Wang <code@wshon.com>"]
description = "Command-line tools for the shine-rs MP3 encoder library"
license = "LGPL-2.0"
repository = "https://github.com/wshon/shine-rs"
homepage = "https://github.com/wshon/shine-rs"
readme = "README.md"

[dependencies]
shine-rs = { path = "crate" }
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
hound = "3.5"

[dev-dependencies]
proptest = "1.4"
sha2 = "0.10"
env_logger = "0.10"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hound = "3.5"

[features]
default = []
diagnostics = ["shine-rs/diagnostics"]

# 集成测试配置

[profile.dev]
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1