[package]
name = "shine-rs"
version = "0.1.2"
edition = "2021"
authors = ["Shon Wang <code@wshon.com>"]
description = "A pure Rust MP3 encoder based on the shine library, providing complete MPEG Layer III encoding functionality"
license = "LGPL-2.0"
repository = "https://github.com/wshon/shine-rs"
homepage = "https://github.com/wshon/shine-rs"
documentation = "https://docs.rs/shine-rs"
readme = "README.md"
keywords = ["mp3", "audio", "encoder", "codec", "shine"]
categories = ["multimedia::audio", "encoding"]

[features]
default = []
diagnostics = ["serde", "serde_json", "chrono"]

[dependencies]
thiserror = "1.0"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
log = "0.4"
hound = "3.5"

[dev-dependencies]
proptest = "1.4"
env_logger = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"