[workspace]
members = [
    "wav2mp3",
    "collect_test_data",
    "validate_test_data",
    "mp3_validator",
    "mp3_hexdump",
]

[workspace.dependencies]
rust-mp3-encoder = { path = ".." }
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"